# coe322-iranarang

./: 6primesbyclass.cpp  favorite computer programmer  pointclass.cpp
hw10/: CMakeLists.txt  hw10.cpp  hw10.hpp
hw2/: output
hw3/: a.out  conjecture  hw3_exercise3  hw3_exercise3.cpp  hw3_exercise6.cpp
hw3/hw3_exercise3.dSYM/Contents/: Info.plist
hw3/hw3_exercise3.dSYM/Contents/Resources/DWARF/: hw3_exercise3
hw4/: 6primesbyclass.cpp
hw5/: CMakeLists.txt  goldbach.cpp
hw6/: CMakeLists.txt  newton-lambda.cpp
hw7/: CMakeLists.txt  align.cpp
hw8/: CMakeLists.txt  dynrect.cpp
hw9/: CMakeLists.txt  linkedlist.cpp  linkedlist.hpp
project/: CMakeLists.txt  infectious.cpp  infectious.hpp  infectious_with_mutation.hpp  main.cpp  main.h  main2.cpp  main2.h
